--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MONGODB_URI=mongodb+srv://dcnacario08:c7seWQbuqIKpuHRm@cluster0.cobfwgb.mongodb.
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=RdFC2dvdspOArj5hxFkEd17iHwzzumeePYDZmXgsON0=
